add:登录接口;禁用gorm的日志输出
