# docs/swagger.yaml
@@ -1,5 +1,42 @@
 basePath: /
 definitions:
+  request.Login:
+    properties:
+      checkCode:
+        type: string
+      checkCodeKey:
+        type: string
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - checkCode
+    - checkCodeKey
+    - email
+    - password
+    type: object
+  request.Register:
+    properties:
+      checkCode:
+        type: string
+      checkCodeKey:
+        type: string
+      email:
+        type: string
+      password:
+        type: string
+      userName:
+        maxLength: 32
+        minLength: 5
+        type: string
+    required:
+    - checkCode
+    - checkCodeKey
+    - email
+    - password
+    - userName
+    type: object
   response.Response:
     properties:
       code:
@@ -33,6 +70,50 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: 获取验证码
+      tags:
+      - Account
+  /api/account/login:
+    post:
+      consumes:
+      - application/json
+      description: 用户登录
+      parameters:
+      - description: 用户登录
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/request.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 用户登录
+      tags:
+      - Account
+  /api/account/register:
+    post:
+      consumes:
+      - application/json
+      description: 用户注册
+      parameters:
+      - description: 用户注册信息
+        in: body
+        name: register
+        required: true
+        schema:
+          $ref: '#/definitions/request.Register'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 用户注册
       tags:
       - Account
   /health:
